Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34937

s3 engine no longer functional on non-gcc builds

    XMLWordPrintable

Details

    Description

      Masking out gcc warnings in https://github.com/mariadb-corporation/libmarias3/commit/5e6aa32f96ebdbcaf32b90d6182685156f8198b5 also masked out the implementation so it would only work on gcc.

      There needs to be a snprintf for non-gcc implementations.

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: