MDEV-34937 s3 engine no longer functional on non-gcc builds

The error in the previous commit 5e6aa32f96ebdbcaf32b90d6182685156f8198b5
the #ifdef __GNUC__ mean there is no snprintf in other implementations.

Solved by constraining the #ifdef __GNUC__ defines to the pragma clauses.